--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image:height" content="630"/>
 
 
-  <title>All Things ViTs</title>
+  <title>Trustworthiness</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
