--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-
+          <div class="is-size-4 publication-authors">
+  			
+            <span class="author-block"><a href="https://sites.google.com/site/pinyuchenpage/" target="_blank">Location: East 14. </a></span>
+          </div>
+          <div class="is-size-4 publication-authors">
+  			
+            <span class="author-block"><a href="https://sites.google.com/site/pinyuchenpage/" target="_blank">Time: 8:30 - 12:00</a></span>
+          </div>
+  
 		<div class="is-size-4 publication-authors">
   
             <span class="author-block"><a href="https://xiaocw11.github.io/" target="_blank">Chaowei Xiao</a><sup>1</sup>,</span>
